<resources>
    <string name="app_name">OnlineFoodAppEngg</string>
    <string name="password">Password</string>
    <string name="userID">Mobile No.</string>
    <string name="login">Login</string>
    <string name="new_account_cliche">Doesn\'t have an account?</string>
    <string name="register_cliche">Register here</string>
    <string name="loginFieldsEmpty">UserID and Password fields can\'t be empty</string>
    <string name="invalidLoginCredentials">UserID and Password doesn\'t match. Retry Login!!</string>
    <string name="loginSuccess">Login Success!!</string>
    <string name="somethingWentWrong">Something went wrong.Retry login!!</string>
    <string name="somethingWentWrongCommon">Something went wrong…</string>
    <string name="userName">Name</string>
    <string name="emailID">E-mail</string>
    <string name="register">Register</string>
    <string name="allMandatoryFields">All fields are mandatory!!</string>
    <string name="userAddedSuccessfully">User added successfully!!</string>
    <string name="userAlreadExists">User already exists!!</string>
    <string name="adminLoginSuccess">Logged in as ADMIN</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="area">Area</string>
    <string name="address"><![CDATA[Door No. & Street Name]]></string>
    <string name="hotelAddress">Street Name</string>
    <string name="violationString">%s field should not exceed %d characters</string>
    <string name="requiredString">%s field should be %d characters</string>
    <string name="roomType">Category</string>
    <string name="chooseDate">Pick Date</string>
    <string name="roomNumber">Room %s</string>
    <string name="roomCost">Cost: Rs.%s</string>
    <string name="roomTypeInfo">%s Room, %s</string>
    <string name="rs">Rs.</string>
    <string name="noRoomsAvailable">No Rooms Available on this date!!</string>
    <string name="book">Book</string>
    <string name="viewHistory">View History</string>
    <string name="roomBlockingFailed">Unable to lock room for you!! Sorry</string>
    <string name="unLockingRoom">Unlocking Room…</string>
    <string name="cost">Cost</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="floor">Floor</string>
    <string name="roomBookingFailed">Room Booking Failed. Retry!!</string>
    <string name="bookingSuccess">Booking Success</string>
    <string name="noRoomsBooked">No Rooms Booked on this date</string>
    <string name="noRoomsBookedUserText">Go back and book a room…</string>
    <string name="bookedBy">Booked by:</string>
    <string name="bookingOn">Check in Date:</string>
    <string name="hotelName">Hotel Name</string>
    <string name="managerName">Manager Name</string>
    <string name="hotel_registration">Hotel Registration</string>
    <string name="loading">Loading…</string>
    <string name="selectCity">Select a city</string>
    <string name="selectArea">Select an Area</string>
    <string name="selectHotel">Hotels in %s</string>
    <string name="error_404">Error 404: Resource missing</string>
    <string name="selectedItems">Items to be ordered</string>
    <string name="emptyCart">Nothing is selected</string>
    <string name="proceed">Pay</string>
    <string name="totalCost">Total Cost: Rs.%d</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="selectedItemCost">Rs.%d</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="orderPlaced">Order Placed Successfully!!</string>
    <string name="orderFailed">Order Failed!! Retry…</string>
    <string name="noOrderFound">Nothing ordered</string>
    <string name="timeStampText">Time: %s</string>
    <string name="cvv">CVV</string>
    <string name="cardNo">Card Number</string>
    <string name="payAmount">Pay Rs.%d</string>
    <string name="selectATable">Select a Table</string>
</resources>
